Freestyle render misalignment #37955

Closed
opened 2013-12-26 17:17:33 +01:00 by Aditia A. Pratama · 9 comments

System Information
linux mint petra 64 bit and nvidia gt 635m

Blender Version
Broken: Blender 2.69.7 hash f7e5e8f
Worked: Blender 2.69 stable

Short description of error
When rendering with freestyle, the lines got misaligned. Below I attach the screenshot.
fs_error.png

Exact steps for others to reproduce the error
Using latest master git build, enable freestyle in render panel, and press f12

**System Information** linux mint petra 64 bit and nvidia gt 635m **Blender Version** Broken: Blender 2.69.7 hash f7e5e8f Worked: Blender 2.69 stable **Short description of error** When rendering with freestyle, the lines got misaligned. Below I attach the screenshot. ![fs_error.png](https://archive.blender.org/developer/F56918/fs_error.png) **Exact steps for others to reproduce the error** Using latest master git build, enable freestyle in render panel, and press f12
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Tamito Kajiyama was assigned by Aditia A. Pratama 2013-12-26 17:17:33 +01:00
Author
Member

Added subscriber: @AditiaA.Pratama

Added subscriber: @AditiaA.Pratama

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Member

Added subscriber: @PaoloAcampora

Added subscriber: @PaoloAcampora
Tamito Kajiyama was unassigned by Sergey Sharybin 2013-12-26 19:22:45 +01:00
Sergey Sharybin self-assigned this 2013-12-26 19:22:45 +01:00

Added subscriber: @kjym3

Added subscriber: @kjym3

This issue was referenced by blender/blender-addons-contrib@79d8f1e4a5

This issue was referenced by blender/blender-addons-contrib@79d8f1e4a5ca824b7c2d8f1f0106818c68cbbfa1

This issue was referenced by 79d8f1e4a5

This issue was referenced by 79d8f1e4a5ca824b7c2d8f1f0106818c68cbbfa1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 79d8f1e4a5.

Closed by commit 79d8f1e4a5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37955
No description provided.